--- a/Word4DayV3/WebFolder/views/students.waComponent/manifest.json
+++ b/Word4DayV3/WebFolder/views/students.waComponent/manifest.json
@@ -1,6 +1,1 @@
-{
-    "name"    : "students",    
-    "html"    : "students.html",
-    "styles"  : [],
-    "scripts" : ["students.js"]
-}
+﻿{"name":"students","html":"students.html","scripts":["students.js"],"styles":["students.css"]}
