--- a/Word4DayV3/WebFolder/views/curr.waComponent/manifest.json
+++ b/Word4DayV3/WebFolder/views/curr.waComponent/manifest.json
@@ -1,6 +1,1 @@
-{
-    "name"    : "curr",    
-    "html"    : "curr.html",
-    "styles"  : [],
-    "scripts" : ["curr.js"]
-}
+﻿{"name":"curr","html":"curr.html","scripts":["curr.js"],"styles":["curr.css"]}
